<resources>
    <string name="app_name">PasalHawula</string>
    <string name="API_KEY">AIzaSyA9AFbbBIfJkXmSru7FRyZ8E8rCtcdKE8A</string>
    <string name="pasalhawula_logo_description">Logo</string>

    <!-- strings fr Login UI -->
    <string name="login">Login </string>
    <string name="login_password_hint">Enter password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup_text">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- strings fr Bottom Navigation Bar -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>

    <!-- strings fr Splash Screen UI -->
    <string name="splashscreen_description">A  school resource sharing app</string>

    <!-- strings fr Register UI -->

    <string name="register_text">Sign Up</string>
    <string name="password_label">Password<font color="#FF0000">*</font></string>
    <string name="email_label">Email<font color="#FF0000">*</font></string>
    <string name="school_name_label">School Name <font color="#FF0000">*</font></string>
    <string name="school_name_hint">Enter school name</string>
    <string name="contact_person_label">Contact Person<font color="#FF0000">*</font></string>
    <string name="contact_person_hint">Enter contact person\'s name</string>
    <string name="email_hint">e.g., school@email.com</string>
    <string name="phone_label">Phone Number<font color="#FF0000">*</font></string>
    <string name="phone_hint">e.g., 071-XXXXXXX</string>
    <string name="password_hint">Create password</string>
    <string name="confirm_password_label">Confirm Password<font color="#FF0000">*</font></string>
    <string name="confirm_password_hint">Re-enter password</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="already_have_account_login">Login</string>


    <!--Strings for Home page -->

    <string name="text_welcome">Welcome back</string>
    <string name="search_resources_hint">Search for resources</string>
    <string name="school_college_name">St.Sebastian B.M.V - Kandana</string>

    <string name="list_resources_action">Add Resources</string>
    <string name="find_resources_action">Find Resources</string>
    <string name="make_request_action">Make a Request</string>

    <string name="resource_categories_title">Resource Categories</string>
    <string name="request_approved_status">Request Approved</string>
    <string name="recent_activities_title">Recent Activities</string>
    <string name="quick_actions_title">Quick Action</string>

    <string name="physical_resources_title">Physical Resources</string>
    <string name="digital_resources_title">Digital Resources</string>
    <string name="human_resources_title">Human Resources</string>

    <string name="items_available_format">%d items available</string>
    <string name="time_ago_format">%s ago</string>

    <string name="chemistry_lab_approved_details">Your request for "Chemistry Lab Equipment" has been approved</string>

    <string name="view_request">View Requests</string>

    <!--Strings for Reset password activity -->
    <string name="reset_password_title">Reset Password</string>
    <string name="email_icon_description">Email icon</string>
    <string name="forgot_password_question">Forgot your password?</string>
    <string name="reset_password_instructions">Enter your email address and we\'ll send you OTP to reset your password.</string>
    <string name="email_label_with_star">Email *</string>
    <string name="email_hint_example">e.g., school@email.com</string>
    <string name="send_otp">Send OTP</string>

    <!--Strings for verify OTP activity -->
    <string name="verify_OTP_title">Verify OTP</string>

    <!--Strings for add details activity -->
    <string name="add_details_title">Add Details</string>
    <string name="physical_tab">Physical</string>
    <string name="digital_tab">Digital</string>
    <string name="human_tab">Human</string>
    <string name="resource_name_hint">Resource Name*</string>
    <string name="category_hint">Category*</string>
    <string name="location_hint">Location*</string>
    <string name="description_hint">Description*</string>
    <string name="upload_images_files_text">Upload images or files</string>
    <string name="file_types_info">PNG, JPG, PDF up to 10MB</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="upload_button">+ Upload</string>
    <string name="main_upload_button">Upload</string>
    <string name="home_tab">Home</string>
    <string name="search_tab">Search</string>
    <string name="add_tab">Add</string>
    <string name="notifications_tab">Notifications</string>
    <string name="profile_tab">Profile</string>

    <!--Strings for find resource activity -->
    <string name="find_resource_title">Find Resources</string>

    <!--Strings for notification activity -->
    <string name="notification_title">Notification</string>
    <string name="back_button_description">Back</string>

    <!--Strings for digital activity -->
    <string name="url_hint">Access Link/URL</string>
    <string name="upload_files_text">Upload files</string>
    <string name="types_info"> PDF ,MP3, ZIP up to 100MB</string>

    <!--Strings for digital activity -->
    <string name="contact_hint">Contact info</string>
    <string name="upload_text">Upload Documents/Portfolio</string>

    <!--Strings for Add Request activity -->
    <string name="make_request">Make a Request</string>


    <!--Strings for profile -->
    <string name="logout">Log Out</string>
    <string name="back_arrow_description">Back</string>
    <string name="profile_txt">Profile</string>
    <string name="school_logo_description">School Logo</string>
    <string name="phone_icon_description">Phone Icon</string>

    <string name="change_password_txt">Change Password</string>
    <string name="notifications_settings_txt">Notifications Settings</string>
    <string name="help_and_support_txt">Help &amp; Support</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
    <string name="terms_and_conditions_txt">Terms &amp; Conditions</string>
    <string name="edit_profile_btn_txt">Edit Profile</string>

    <!--Strings for edit profile -->
    <string name="edit_profile_screen_title">Edit Profile</string>
    <string name="edit_profile_info_header">Edit Profile Information</string>
    <string name="edit_profile_school_name_label">School Name</string>
    <string name="edit_profile_location_label">Location</string>
    <string name="edit_profile_phone_number_label">Phone Number</string>
    <string name="edit_profile_email_address_label">Email Address</string>
    <string name="edit_profile_save_changes_button">Save Changes</string>
    <string name="edit_profile_picture_text">Change Photo</string>

    <string name="profile_picture_description">Current profile picture</string>

    <string name="hint_school_name">Edit school name</string>
    <string name="hint_location">Edit location</string>
    <string name="hint_phone_number">Edit phone number</string>
    <string name="hint_email_address">Edit email address</string>

    <!-- Search Location Input Field Hint Text  -->
    <string name="search_location_hint">Search Location</string>


</resources>